--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Cheers!"
 title_separator          : "-"
 name                     : &name "Xiaoyun Li"
-description              : &Ph.D student at Rutgers University, Research Scientist, Baidu Research USA"
+description              : &"Ph.D student at Rutgers University, Research Scientist, Baidu Research USA"
 url                      : https://lixiaoyun0239.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "lixiaoyun0239/lixiaoyun0239.github.io"
