--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@
 locale                   : "en-US"
 title                    : "Cheers!"
 title_separator          : "-"
-name                     : &name "Xiaoyun Li"
-description              : &description  "Ph.D student at Rutgers University, Research Scientist, Baidu Research USA"
+name                     : &name "Xiaoyun Li's website"
+description              : &description  "Xiaoyun Li's website"
 url                      : https://lixiaoyun0239.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "lixiaoyun0239/lixiaoyun0239.github.io"
@@ -80,13 +80,13 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Sidebar Name"
+  name             : "Xiaoyun Li"
   avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
-  location         : "Location"
+  bio              : "Ph.D student in statistics at Rutgers University. Research scientist, Baidu Research USA"
+  location         : "USA, China"
   employer         :
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : "http://yourfullgooglescholarurl.com"
+  pubmed           : 
+  googlescholar    : 
   email            :
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
