--- a/_config.yml
+++ b/_config.yml
@@ -82,9 +82,7 @@ analytics:
 author:
   name             : "Xiaoyun Li"
   avatar           : "profile.png"
-  bio              : "Ph.D student in statistics at Rutgers University. 
-  
-  Research scientist, Baidu Research USA"
+  bio              : "Ph.D student in statistics at Rutgers University.\ Research scientist, Baidu Research USA"
   location         : "USA, China"
   employer         :
   pubmed           : 
