--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Xiaoyun Li"
   avatar           : "profile.png"
-  bio              : "Ph.D student in statistics at Rutgers University"
+  bio              : "Ph.D in statistics, Rutgers University"
   location         : "USA, China"
   employer         :
   pubmed           : 
