--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Xiaoyun Li"
-  avatar           : "profile.png"
+  avatar           : "profile_XL.jpg"
   bio              : "Ph.D in statistics, Rutgers University"
   location         : "USA, China"
   employer         :
