--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Xiaoyun Li"
   avatar           : "profile_XL.jpg"
-  bio              : "Ph.D in statistics, Rutgers University"
+  bio              : "Research Scientist, Cognitive Computing Lab, Baidu Research"
   location         : "USA, China"
   employer         :
   pubmed           : 
