--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Xiaoyun Li"
   avatar           : "profile_XL.jpg"
-  bio              : "Research Scientist at Baidu"
+  bio              : "Machine Learning Engineer at LinkedIn\ Research Scientist at Baidu"
   location         : "USA, China"
   employer         :
   pubmed           : 
