--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Xiaoyun Li"
   avatar           : "profile_XL.jpg"
-  bio              : "Machine Learning Engineer, LinkedIn \ ex-Research Scientist, Baidu"
+  bio              : "ML Engineer at LinkedIn <br /> ex-Research Scientist at Baidu"
   location         : "USA, China"
   employer         :
   pubmed           : 
